# 02689-Advanced-Numerical-Methods

./: .gitignore  1_fourier.ipynb  2_polynomial.ipynb  pyproject.toml
assignment_1/: 1_fourier.ipynb  2_polynomial.ipynb  Assignment1_COMPLETE.ipynb  jk_1_fourier.ipynb  jk_2_polynomial.ipynb  main.typ  pc_1_fourier.ipynb  pc_2_polynomial.ipynb  plot_1c.ipynb  tb_exercise_1.ipynb  tb_exercise_2.ipynb
assignment_1/provided/: utils.py
assignment_1/report/: main.typ  references.bib
assignment_2/: Assignment2_COMPLETE.ipynb  common.py  jk_1a.ipynb  jk_1b.ipynb  jk_2c-2g.ipynb  jk_2h.ipynb  jk_exercise_1.ipynb  jk_exercise_2.ipynb  jk_utils.py  pc_BVP.ipynb  pc_timeDependent.ipynb  tb_exercise_1.ipynb  tb_exercise_2.ipynb  tb_utils.py  utils.py
assignment_2/report/: main.typ  references.bib  trimmed_parts.typ
assignment_3/: discretization.py  jk_gmsh_test.ipynb  mesh.py  operators.py  pc_assembly.ipynb  plot_convergence.ipynb  plot_mesh.ipynb  plotting_solution.ipynb  sem_final.ipynb  solver.py  solver_bvp.py  solver_heat.py  solver_ivp.py  tb_nodal_galerkin.ipynb  tb_sem.ipynb  tb_sem_final.ipynb  tb_sem_ivp_test.ipynb  tb_sem_nice.ipynb  tb_utils.py  utils.py
assignment_3/report/: poster-template.typ  poster.typ  question.typ  references.bib  report.typ
