[project]
name = "assignments"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gmsh>=4.15.0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pip>=25.2",
    "pyarrow>=22.0.0",
    "rocket-fft",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
]
